--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<h1>Demonstration of ES 2015 features</h1>
+	<h1>This is a new header</h1>
 	<p>Welcome to the ES 2015 demos</p>
 	<p>The best way to use this is to open each page in a browser that supports ES 2015 (ES 6) and set breakpoints to watch what is going on.</p>
 	
